@@ -1,3 +1,7 @@
+Sun Oct  2 02:03:06 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* numeric.c (rb_fix2str): detect unnormalized Fixnum value.
+
 Sat Oct  1 23:08:47 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/date/date_parse.c (date_zone_to_diff): it's nonsence and really
